# client

./: .buildinfo  .dir-locals.el  .gitignore  .mailmap  .projectile  .travis.yml  AUTHORS  CHANGES  CONTRIBUTING  ChangeLog  ConfigDict.py  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  TODO  TODO.md  api.html  appendix.html  aws-flavor.html  aws-keys.html  aws.html  azure-flavor.html  azure-image.html  azure.html  c.py  changes.html  changes_gitlog.html  changes_summary.html  choco.html  cloudmesh_client.cloud.hpc.html  cloudmesh_client.cloud.hpc.provider.html  cloudmesh_client.cloud.hpc.provider.slurm.html  cloudmesh_client.cloud.html  cloudmesh_client.cloud.iaas.html  cloudmesh_client.cloud.iaas.provider.html  cloudmesh_client.cloud.iaas.provider.libcloud.html  cloudmesh_client.cloud.iaas.provider.openstack.html  cloudmesh_client.comet.html  (+72 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
_modules/: abc.html  cloudmesh_client.html  index.html
_sources/: api.rst.txt  api.txt  aws-keys.rst.txt  azure-flavor.rst.txt  azure.txt  changes.txt  changes_gitlog.txt  changes_summary.rst.txt  cloudmesh_client.cloud.iaas.provider.txt  cloudmesh_client.comet.txt  cloudmesh_client.common.txt  cloudmesh_client.keys.txt  cloudmesh_client.shell.txt  cloudmesh_client.txt  comet.txt  commands_nova.rst.txt  configuration.txt  docker.txt  exercises.rst.txt  exercises.txt  hackathon.rst.txt  hacking.txt  index.txt  install.rst.txt  installation.txt  introduction.rst.txt  introduction.txt  man.rst.txt  old.txt  old1.txt  prefix.rst.txt  prefix.txt  quickstart.txt  reference_card.txt  scripts.txt  system-cygwin.txt  system-windows-gregor.txt  system.txt  todo.rst.txt  upgrade.txt  (+1 more)
cloudmesh_client/: __init__.py  borg.py  default.py  exc.py  hostlist.py  locations.py  logger.py  main.py  setup.py  shell_commad.py  ssh_config.py  util.py  var.py  version.py
cloudmesh_client2/: __init__.py  default.py  var.py
cloudmesh_cloud/: clouds.py  command_cloud.py  command_default.py  command_nova.py
cloudmesh_common/: ConfigDict.py  FlatDict.py  __init__.py  tables.py
(+1037 files in other folders)
