[metadata]
name = cloudmesh_common
author = Gregor von Laszewski
author-email = laszewski@gmail.com
summary = Test for cloudmesh SQLAlchemy
description-file = README.rst
home-page = https://mycloudmesh.org/learning
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
keywords =
    cloud
[files]
packages =
    cloudmesh_common
    cloudmesh_deault

#data_files =
#    etc/pbr = etc/*
#    etc/init =
#        pbr.packaging.conf
#        pbr.version.conf
#[entry_points]
#console_scripts =
#    pbr = pbr.cmd:main
#pbr.config.drivers =
#    plain = pbr.cfg.driver:Plain

