[egg_info]
tag_build =

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[metadata]
description-file = README.rst

[flake8]
# E221: multiple spaces before operator
# E226: missing whitespace around arithmetic operator
# E251: unexpected spaces around keyword parameter equal sign
# E266: too many leading '#' for block comment
# E303: too many blank lines
ignore = E221,E226,E251,E266,E303
max-line-length = 99
