[egg_info]
tag_build =

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[metadata]
description-file = README.rst

[flake8]
# E124: closing bracket does not match visual indentation
# E128: continuation line under-indented for visual indent
# E203: whitespace vefore ','
# E221: multiple spaces before operator
# E226: missing whitespace around arithmetic operator
# E251: unexpected spaces around keyword parameter equal sign
# E266: too many leading '#' for block comment
# E272: multiple spaces before keyword
# E303: too many blank lines
ignore = E124,E128,E203,E221,E226,E251,E266,E272,E303
max-line-length = 99
